add first angular form

--- a/TestApp/src/app/recursive-string/recursive-string.component.html
+++ b/TestApp/src/app/recursive-string/recursive-string.component.html
@@ -3,4 +3,10 @@
     <label>input data:
             <input type="text" [(ngModel)]="data">
     </label>
+    <div *ngIf="response">
+        <ul>
+            <li *ngFor="let item of response">{{item}}</li>
+        </ul>
+    </div>
+    <button (click)="getRecursiveString()">get data</button>
 </div>
